k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-api-deployment
  namespace: todoapp
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: todoapp
  template:
    metadata:
      labels:
        component: todoapp
    spec:
      containers:
        - name: todoapp-api
          image: m3sh/todo-app-api
