k8s/api-expose-service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: api-expose-service
  namespace: todoapp
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31234
  selector:
    component: todoapp
  type: NodePort
