k8s/db-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-db-clusterip-service
  namespace: todoapp
spec:
  type: ClusterIP
  selector:
    component: todoapp-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
