k8s/db-expose-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    run: postgres
  name: db-expose-service
  namespace: todoapp
spec:
  ports:
    - nodePort: 30000
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    component: todoapp-db
  type: NodePort
