k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp
spec:
  ingressClassName: nginx
  rules:
    - host: todoapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: api-expose-service
                port:
                  number: 8080
